--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,8 @@ jobs:
                       testbench: 6.*
                 exclude:
                     - laravel: 10.*
+                      php: 8.0
+                    - laravel: 10.*
                       php: 7.4
                     - laravel: 9.*
                       php: 7.4
