--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
                 os: [ubuntu-latest, windows-latest]
                 php: [7.4, 8.0, 8.1]
                 laravel: [8.*, 9.*, 10.*]
-                stability: [prefer-lowest, prefer-stable]
+                stability: [prefer-stable]
                 include:
                     - laravel: 10.*
                       testbench: 8.*
