--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,10 +13,12 @@ jobs:
             fail-fast: true
             matrix:
                 os: [ubuntu-latest, windows-latest]
-                php: [7.4, 8.0, 8.1]
-                laravel: [8.*, 9.*, 10.*]
+                php: [7.4, 8.0, 8.1, 8.2]
+                laravel: [8.*, 9.*, 10.*, 12.*]
                 stability: [prefer-stable]
                 include:
+                    - laravel: 12.*
+                      testbench: 9.*
                     - laravel: 10.*
                       testbench: 8.*
                     - laravel: 9.*
@@ -25,10 +27,12 @@ jobs:
                       testbench: 6.*
                 exclude:
                     - laravel: 10.*
-                      php: 8.0
-                    - laravel: 10.*
                       php: 7.4
+                    - laravel: 10.*
+                      php: 8.0
                     - laravel: 9.*
+                      php: 7.4
+                    - laravel: 12.*
                       php: 7.4
 
         name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.stability }} - ${{ matrix.os }}
