--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,11 +61,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php: ['8.2', '8.3']  # Removed 8.1 as Laravel 12 requires 8.2+
+        php: ['8.2', '8.3']
         laravel: ['^12.0']
         include:
           - laravel: '^12.0'
-            testbench: '^8.0'
+            testbench: '^9.0'  # Changed to testbench 9.x for Laravel 12 support
 
     steps:
       - name: Checkout code
@@ -127,4 +127,3 @@ jobs:
 
       - name: Run PHP CS Fixer
         run: vendor/bin/php-cs-fixer fix --dry-run --diff
-        
